--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -20,18 +20,65 @@
                 <a href="index.html">
                     <img src="img/logo.png" alt="" width="130px">
                 </a>
-                <nav>
-                    <ul class="nav">
-                        <li>HOME</li>
-                        <li>PROTOFOLIO</li>
-                        <li>BLOG</li>
-                        <li>PAGES</li>
-                        <li>FEATURES</li>
-                        <li>MEGAMENU</li>
-                        <li>CONTACT</li>
-
+                <nav class="nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">BLOG</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">PAGES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">FEATURES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">MEGAMENU</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">CONTACT</a>
+                        </li>
                     </ul>
+
+                    <div class="nav-toggle">
+                        <span class="one"></span>
+                        <span class="two"></span>
+                        <span class="three"></span>
+                    </div>
                 </nav>
+                <div class="nav2-mobile">
+                    <div class="mobilenav">
+                        <ul class="nav-ul-mobile">
+                            <li class="nav-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">BLOG</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">PAGES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">FEATURES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">MEGAMENU</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index.html">CONTACT</a>
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+
 
             </div>
 
@@ -51,12 +98,12 @@
         <div class="container">
             <div class="about-content">
                 <h2 class="heading">Beautiful.Clean.Responsive</h2>
-                <p class="sub-heading">REEN is a high-quality solution of those who want a beautiful website in no
+                <p class="sub-title">REEN is a high-quality solution of those who want a beautiful website in no
                     time.it's fullu responsive and will adapt itself to any mobile device.ipad,iphone,Android,it doesn't
                     matter.your content will always looks its absolute best.</p>
-                <div class="row">
+                <div class="row g-2">
                     <div class=" col-md-5 col-lg-4 col-xl-4">
-                        <div class="card">
+                        <div class="card" data-aos="fade-up">
                             <img src="img/heart.png" width="30px" alt="">
                             <div class="content">
                                 <h2 class="title">passion</h2>
@@ -71,8 +118,8 @@
                     </div>
 
                     <div class="col-md-5 col-lg-4 col-xl-4">
-                        <div class="card" data-aos="fade-right">
-                            <img src="img/creativity.png" width="30px" alt="">
+                        <div class="card" data-aos="fade-up"">
+                            <img src=" img/creativity.png" width="30px" alt="">
                             <div class="content">
                                 <h2 class="title">Creativity</h2>
                                 <p class="description">Magnis modipsae que lib voloratati andigen daepeditem qulate re
@@ -86,7 +133,7 @@
                     </div>
 
                     <div class="col-md-5 col-lg-4 col-xl-4">
-                        <div class="card">
+                        <div class="card" data-aos="fade-up">
                             <img src="img/star.png" width="30px" alt="">
                             <div class="content">
                                 <h2 class="title">Quality</h2>
@@ -112,13 +159,13 @@
         <div class="container">
             <div class="works-content">
                 <h2 class="heading">Check out our latest works</h2>
-                <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+                <p class="sub-title">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
                 <div class="row g-5">
                     <div class="col-md-6">
                         <div class="images1">
                             <img src="img/image2.png" width="100%" alt="">
-                            <div class="cap">
-                                <div class="caption">grand motel identity brushup</div>
+                            <div class="box">
+                                <div class="caption">Grand motel identity brushup</div>
                                 <div class="identity">identity</div>
 
                             </div>
@@ -130,8 +177,8 @@
                     <div class="col-md-6">
                         <div class="images1">
                             <img src="img/image1.png" width="100%" alt="">
-                            <div class="cap">
-                                <div class="caption">fresh branding for a creative startup</div>
+                            <div class="box">
+                                <div class="caption">Fresh branding for a creative startup</div>
                                 <div class="identity">identity</div>
                             </div>
 
@@ -168,7 +215,7 @@
     <section id="contact">
         <div class="contact-details">
             <h2 class="heading">Want to Work with us?</h2>
-            <p class="description">Magins modipsae que voloratati andigen daepeditem quiate re porem aut labor.laceaque
+            <p class="sub-title">Magins modipsae que voloratati andigen daepeditem quiate re porem aut labor.laceaque
                 quiae sitiorem rest non restibusaes maio esdem tumquem.</p>
 
             <form action="">
@@ -176,7 +223,7 @@
                     <input type="text" class="name" id="name" placeholder="Name">
                     <input type="email" class="email" id="email" placeholder="email">
                     <textarea name="message" id="meassage" class="message" placeholder=" meassage"></textarea>
-                    <button>SUBMIT</button>
+                    <button class="ctct-btn">SUBMIT</button>
                 </div>
 
             </form>
@@ -184,7 +231,7 @@
 
     </section>
 
-    
+
 
     <footer>
         <div class="container">
@@ -243,7 +290,7 @@
                             </p>
                             <form class="contact" action="">
                                 <input type="text" placeholder="enter your email address">
-                                <input type="submit">
+                                <input type="SUBMIT" class="submit-btn">
                             </form>
 
 
@@ -254,29 +301,34 @@
             </div>
         </div>
         <div class="ftr-last">
-            <div class="container">
-                <h6>2024 REEN All rights reserved</h6>
-                <nav>
-                    <ul class="nav">
-                        <li>Home</li>
-                        <li>Protfolio</li>
-                        <li>Blog</li>
-                        <li>Pages</li>
-                        <li>Features</li>
-                        <li>Megamenu</li>
-                        <li>Contact</li>
+            <h6>2026 REEN All rights reserved</h6>
 
-                    </ul>
-                </nav>
-            </div>
         </div>
 
 
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <script>
+        $(document).ready(function () {
+            $("span").click(function () {
+                $(".nav-toggle").toggleClass("toggle");
+                // $(this).text("span");
+
+            })
+            $("span").click(function () {
+                $(".nav2-mobile").toggleClass("menu");
+            })
+        })
+    </script>
+
 
 </body>
 
